--- a/css/style.css
+++ b/css/style.css
@@ -411,3 +411,40 @@ ul{
             display: none;
         }
     }
+.project-section {
+  margin-top: 10px;
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.project-section-items {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+.boxes {
+  height: 100px;
+  width: 150px;
+  background-color: rgba(36, 36, 36, 0.594);
+  margin: 5px 10px;
+  cursor: pointer;
+  transition: all 1s; /* lets make it smooth */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  color: white;
+  padding: 10px;
+}
+
+.zoom-in:hover {
+  background-color: crimson;
+  transition: all 0.5s;
+  transform: scale(1.5);
+}
